--- a/server/makefile
+++ b/server/makefile
@@ -1,6 +1,5 @@
-CC=aarch64-none-linux-gnu-gcc
 all: aesdsocket
 aesdsocket:server.c
-	${CC} -o $@ server.c
+	aarch64-none-linux-gnu-gcc -o aesdsocket server.c
 clean:
 	rm -rf aesdsocket	 
