resolving build problems

--- a/server/makefile
+++ b/server/makefile
@@ -1,5 +1,5 @@
 all: aesdsocket
 aesdsocket:server.c
-	aarch64-none-linux-gnu-gcc -o aesdsocket2 server.c
+	aarch64-none-linux-gnu-gcc -o aesdsocket server.c
 clean:
 	rm -rf aesdsocket	 
