--- a/server/makefile
+++ b/server/makefile
@@ -1,5 +1,6 @@
+CC=$(CROSS-COMPILE)gcc
 all: aesdsocket
 aesdsocket:server.c
-	aarch64-none-linux-gnu-gcc -o aesdsocket server.c
+	${CC} -o aesdsocket server.c
 clean:
 	rm -rf aesdsocket	 
